--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "loader-utils": "3.2.1",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "@vercel/analytics": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
